# MLStone

./: CMakeLists.txt  README.md  board.cpp  board.hpp  build.bat  card.cpp  card.hpp  card_generator.cpp  card_generator.hpp  cards.txt  deck.cpp  deck.hpp  effect.cpp  effect.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  target.cpp  target.hpp  utils.cpp  utils.hpp
effects/: damage_effect.cpp  damage_effect.hpp  destroy_effect.cpp  destroy_effect.hpp  give_windfury_effect.cpp  give_windfury_effect.hpp  heal_effect.cpp  heal_effect.hpp
factories/: .kdev_include_paths  factories.cpp  factories.hpp
tests/: CMakeLists.txt  board_tests.h  card_tests.h  deck_tests.h  effect_tests.h  factory_tests.h  player_tests.h
